<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/iv_profile"
                android:text="@string/user_name"
                android:textAllCaps="false"
                android:textColor="#1C1C1C"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_lastseen"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username"
                android:layout_toRightOf="@id/iv_profile"
                android:text="@string/last_seen" />

            <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_more_horiz_24" />

            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_profile"
                android:layout_marginLeft="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_forum_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/btn_comment"
                android:layout_alignLeft="@id/btn_comment"
                android:layout_alignRight="@id/btn_comment"
                android:text="@string/comments" />

            <ImageButton
                android:id="@+id/btn_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_comment"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="70dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_favorite_border_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/btn_likes"
                android:layout_alignLeft="@id/btn_likes"
                android:layout_alignRight="@id/btn_likes"
                android:text="@string/likes" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_profile"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/btn_comment"

                android:text="@string/dumy_desc"
                android:textColor="#000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageview_wall"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_below="@+id/tv_desc"
                android:layout_marginLeft="90dp"
                android:src="@drawable/dummy" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>