<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_gravity="center"

                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="#000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/bio"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="438"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="298"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="321K"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Posts"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Following"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Followers"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape1"
                    android:elevation="20dp"
                    android:text="Follow"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:elevation="20dp"
                    android:text="Message"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/label"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <Button
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_baseline_list_24" />

                <Button
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@drawable/ic_baseline_view_module_24" />

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="3"
                android:rowCount="7">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/imgshape"
                    android:src="@drawable/s1" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s4" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s2" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s5" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s6" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s3" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s7" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s10" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s9" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s1" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s11" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s12" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s13" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="110dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/s14" />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>